--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -273,7 +273,7 @@ a {
   font-family: Verdana,Geneva,Tahoma,sans-serif;
   line-height: 25px;
   font-style: normal;
-  font-size: 16px;
+  font-size: 1.2em;
   line-height: 30px;
 }
 
