--- a/_includes/relatedposts.html
+++ b/_includes/relatedposts.html
@@ -1,6 +1,6 @@
 <div class="relatedPosts">
 <hr>
-        <h4 style="text-align: left; padding-right: 4.5em;"">Похожие посты</h4>
+        <h4 style="text-align: left; padding-right: 4.5em;""></h4>
         <div class="mdl-grid">
         {% assign maxRelated = 4 %}
         {% assign minCommonTags =  2 %}
