--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,7 @@
        
     </div>
     <div class="mdl-mini-footer__right-section"> <div class="Telegram">
-            <button id="Telegram">Telegram</button>
+            <button id="Telegram" onclick="window.location.href='https://t-do.ru/itwars_me'">Telegram</button>
         </div>
 </div>
 </footer>
