--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,4 +27,5 @@
             <button id="Telegram" onclick="window.location.href='https://t-do.ru/itwars_me'">Telegram</button>
         </div>
 </div>
+<style>.copy-left { display: inline-block; text-align: right; margin: 0px; -moz-transform: scaleX(-1); -o-transform: scaleX(-1); -webkit-transform: scaleX(-1); transform: scaleX(-1); filter: FlipH; -ms-filter: “FlipH”; }</style>
 </footer>
