--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -443,3 +443,5 @@ div.tagcloud {
 .post-block .post-card__fade {
   visibility: hidden;
 }
+
+.copy-left { display: inline-block; text-align: right; margin: 0px; -moz-transform: scaleX(-1); -o-transform: scaleX(-1); -webkit-transform: scaleX(-1); transform: scaleX(-1); filter: FlipH; -ms-filter: “FlipH”; }
